--- a/checkout-shipping.html
+++ b/checkout-shipping.html
@@ -43,7 +43,7 @@
   </noscript>
 
   <!-- Page Title -->
-  <title>OldSkool | Bootstrap 5 HTML Template</title>
+  <title>Nick's Supps Store</title>
 
 </head>
 <body class="">
@@ -95,7 +95,7 @@
                                 <span class="d-flex justify-content-between align-items-start">
                                   <span>
                                     <span class="mb-0 fw-bolder d-block">Click & Collect Shipping</span>
-                                    <small class="fw-bolder">Collect from our London store</small>
+                                    <small class="fw-bolder">Collect from our Adelaide Store</small>
                                   </span>
                                   <span class="small fw-bolder text-uppercase">Free</span>
                                 </span>
@@ -108,10 +108,10 @@
                               <label class="form-check-label" for="checkoutShippingMethodTwo">
                                 <span class="d-flex justify-content-between align-items-start">
                                   <span>
-                                    <span class="mb-0 fw-bolder d-block">UPS Next Day</span>
-                                    <small class="fw-bolder">For all orders placed before 1pm Monday to Thursday</small>
+                                    <span class="mb-0 fw-bolder d-block">GD-EMS</span>
+                                    <small class="fw-bolder">One week delivery</small>
                                   </span>
-                                  <span class="small fw-bolder text-uppercase">$19.99</span>
+                                  <span class="small fw-bolder text-uppercase">$8.95</span>
                                 </span>
                               </label>
                             </div>
@@ -122,10 +122,10 @@
                               <label class="form-check-label" for="checkoutShippingMethodThree">
                                 <span class="d-flex justify-content-between align-items-start">
                                   <span>
-                                    <span class="mb-0 fw-bolder d-block">DHL Priority Service</span>
+                                    <span class="mb-0 fw-bolder d-block">Australia Post</span>
                                     <small class="fw-bolder">24 - 36 hour delivery</small>
                                   </span>
-                                  <span class="small fw-bolder text-uppercase">$9.99</span>
+                                  <span class="small fw-bolder text-uppercase">$18.99</span>
                                 </span>
                               </label>
                             </div>
@@ -143,46 +143,46 @@
                             <!-- Cart Item-->
                             <div class="row mx-0 py-4 g-0 border-bottom">
                                 <div class="col-2 position-relative">
-                                        <span class="checkout-item-qty">3</span>
+                                        <span class="checkout-item-qty">1</span>
                                     <picture class="d-block border">
-                                        <img class="img-fluid" src="./assets/images/products/product-cart-1.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                        <img class="img-fluid" src="./assets/images/products/product-cart-1.jpg"
                                     </picture>
                                 </div>
                                 <div class="col-9 offset-1">
                                     <div>
                                         <h6 class="justify-content-between d-flex align-items-start mb-2">
-                                            Nike Air VaporMax 2021
+                                            Disorder Brown Sugar Pre-Workout
                                             <i class="ri-close-line ms-3"></i>
                                         </h6>
-                                        <span class="d-block text-muted fw-bolder text-uppercase fs-9">Size: 9 / Qty: 1</span>
+                                        <span class="d-block text-muted fw-bolder text-uppercase fs-9">Size: 40 Serves / Qty: 1</span>
                                     </div>
-                                    <p class="fw-bolder text-end text-muted m-0">$85.00</p>
+                                    <p class="fw-bolder text-end text-muted m-0">$25.00</p>
                                 </div>
                             </div>    <!-- / Cart Item-->
                             <!-- Cart Item-->
                             <div class="row mx-0 py-4 g-0 border-bottom">
                                 <div class="col-2 position-relative">
-                                        <span class="checkout-item-qty">3</span>
+                                        <span class="checkout-item-qty">1</span>
                                     <picture class="d-block border">
-                                        <img class="img-fluid" src="./assets/images/products/product-cart-2.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                        <img class="img-fluid" src="./assets/images/products/product-cart-2.jpeg"
                                     </picture>
                                 </div>
                                 <div class="col-9 offset-1">
                                     <div>
                                         <h6 class="justify-content-between d-flex align-items-start mb-2">
-                                            Nike ZoomX Vaporfly
+                                            Disorder Blue Pearl Pre-Workout
                                             <i class="ri-close-line ms-3"></i>
                                         </h6>
-                                        <span class="d-block text-muted fw-bolder text-uppercase fs-9">Size: 11 / Qty: 1</span>
+                                        <span class="d-block text-muted fw-bolder text-uppercase fs-9">Size: 40 Serves / Qty: 1</span>
                                     </div>
-                                    <p class="fw-bolder text-end text-muted m-0">$125.00</p>
+                                    <p class="fw-bolder text-end text-muted m-0">$25.00</p>
                                 </div>
                             </div>    <!-- / Cart Item-->
                         </div>
                         <div class="py-4 border-bottom">
                             <div class="d-flex justify-content-between align-items-center mb-2">
                                 <p class="m-0 fw-bolder fs-6">Subtotal</p>
-                                <p class="m-0 fs-6 fw-bolder">$422.99</p>
+                                <p class="m-0 fs-6 fw-bolder">$50</p>
                             </div>
                             <div class="d-flex justify-content-between align-items-center ">
                                 <p class="m-0 fw-bolder fs-6">Shipping</p>
@@ -193,9 +193,9 @@
                             <div class="d-flex justify-content-between">
                                 <div>
                                     <p class="m-0 fw-bold fs-5">Grand Total</p>
-                                    <span class="text-muted small">Inc $45.89 sales tax</span>
+                                    <span class="text-muted small">Inc $5 sales tax</span>
                                 </div>
-                                <p class="m-0 fs-5 fw-bold">$422.99</p>
+                                <p class="m-0 fs-5 fw-bold">$58.95</p>
                             </div>
                         </div>
                         <div class="py-4">
