--- a/cart.html
+++ b/cart.html
@@ -43,7 +43,7 @@
   </noscript>
 
   <!-- Page Title -->
-  <title>OldSkool | Bootstrap 5 HTML Template</title>
+  <title>Nick's Supps Store</title>
 
 </head>
 <body class="">
@@ -88,30 +88,30 @@
                                             <div class="col-9 offset-1">
                                                 <div>
                                                     <h6 class="justify-content-between d-flex align-items-start mb-2">
-                                                        Nike Air VaporMax 2021
+                                                        Disorder Brown Sugar Pre-Workout
                                                         <i class="ri-close-line ms-3"></i>
                                                     </h6>
-                                                    <span class="d-block text-muted fw-bolder text-uppercase fs-9">Size: 9 / Qty: 1</span>
+                                                    <span class="d-block text-muted fw-bolder text-uppercase fs-9">Size: 40 Serves / Qty: 1</span>
                                                 </div>
-                                                <p class="fw-bolder text-end text-muted m-0">$85.00</p>
+                                                <p class="fw-bolder text-end text-muted m-0">$25.00</p>
                                             </div>
                                         </div>                                        <!-- / Cart Item-->
                                         <!-- Cart Item-->
                                         <div class="row mx-0 py-4 g-0 border-bottom">
                                             <div class="col-2 position-relative">
                                                 <picture class="d-block border">
-                                                    <img class="img-fluid" src="./assets/images/products/product-cart-2.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                                    <img class="img-fluid" src="./assets/images/products/product-cart-2.jpeg" alt="HTML Bootstrap Template by Pixel Rocket">
                                                 </picture>
                                             </div>
                                             <div class="col-9 offset-1">
                                                 <div>
                                                     <h6 class="justify-content-between d-flex align-items-start mb-2">
-                                                        Nike ZoomX Vaporfly
+                                                        Disorder Blue Pearl Pre-Workout
                                                         <i class="ri-close-line ms-3"></i>
                                                     </h6>
-                                                    <span class="d-block text-muted fw-bolder text-uppercase fs-9">Size: 11 / Qty: 1</span>
+                                                    <span class="d-block text-muted fw-bolder text-uppercase fs-9">Size: 40 Serves / Qty: 1</span>
                                                 </div>
-                                                <p class="fw-bolder text-end text-muted m-0">$125.00</p>
+                                                <p class="fw-bolder text-end text-muted m-0">$25.00</p>
                                             </div>
                                         </div>                                        <!-- / Cart Item-->
                                     </tbody>
@@ -126,9 +126,9 @@
                             <div class="d-flex flex-column flex-md-row justify-content-md-between mb-4 mb-md-2">
                                 <div>
                                     <p class="m-0 fw-bold fs-5">Grand Total</p>
-                                    <span class="text-muted small">Inc $45.89 sales tax</span>
+                                    <span class="text-muted small">Inc $5 sales tax</span>
                                 </div>
-                                <p class="m-0 fs-5 fw-bold">$422.99</p>
+                                <p class="m-0 fs-5 fw-bold">$50</p>
                             </div>
                         </div>
                         <div class="py-4">
