--- a/checkout-payment.html
+++ b/checkout-payment.html
@@ -43,7 +43,7 @@
   </noscript>
 
   <!-- Page Title -->
-  <title>OldSkool | Bootstrap 5 HTML Template</title>
+  <title>Nick's Supps Store</title>
 
 </head>
 <body class="">
@@ -86,14 +86,14 @@
                                 <li class="list-group-item d-flex justify-content-between align-items-center">
                                     <div class="d-flex justify-content-start align-items-center">
                                         <span class="text-muted small me-2 f-w-36 fw-bolder">Deliver To</span>
-                                        <span class="small">123 Street, London, SM3 5TY, United Kingdom</span>
+                                        <span class="small">123 Street, Mount Gambier, South Australia, Australia</span>
                                     </div>
                                     <a href="./checkout-shipping.html" class="text-muted small" role="button">Change</a>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-center">
                                     <div class="d-flex justify-content-start align-items-center">
                                         <span class="text-muted small me-2 f-w-36 fw-bolder">Method</span>
-                                        <span class="small">UPS Priority Delivery</span>
+                                        <span class="small">GD-EMS</span>
                                     </div>
                                     <a href="./checkout-shipping.html" class="text-muted small" role="button">Change</a>
                                 </li>
@@ -187,7 +187,7 @@
                             <!-- Accept Terms Checkbox-->
                             <div class="form-group form-check m-0">
                               <input type="checkbox" class="form-check-input" id="accept-terms" checked>
-                              <label class="form-check-label fw-bolder" for="accept-terms">I agree to OldSkool's <a href="#">terms &
+                              <label class="form-check-label fw-bolder" for="accept-terms">I agree to Nick's Supp's <a href="#">terms &
                                   conditions</a></label>
                             </div>
                             
@@ -205,46 +205,46 @@
                             <!-- Cart Item-->
                             <div class="row mx-0 py-4 g-0 border-bottom">
                                 <div class="col-2 position-relative">
-                                        <span class="checkout-item-qty">3</span>
+                                        <span class="checkout-item-qty">1</span>
                                     <picture class="d-block border">
-                                        <img class="img-fluid" src="./assets/images/products/product-cart-1.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                        <img class="img-fluid" src="./assets/images/products/product-cart-1.jpg"
                                     </picture>
                                 </div>
                                 <div class="col-9 offset-1">
                                     <div>
                                         <h6 class="justify-content-between d-flex align-items-start mb-2">
-                                            Nike Air VaporMax 2021
+                                            Disorder Brown Sugar Pre-Workout
                                             <i class="ri-close-line ms-3"></i>
                                         </h6>
-                                        <span class="d-block text-muted fw-bolder text-uppercase fs-9">Size: 9 / Qty: 1</span>
+                                        <span class="d-block text-muted fw-bolder text-uppercase fs-9">Size: 40 Serves / Qty: 1</span>
                                     </div>
-                                    <p class="fw-bolder text-end text-muted m-0">$85.00</p>
+                                    <p class="fw-bolder text-end text-muted m-0">$25.00</p>
                                 </div>
                             </div>    <!-- / Cart Item-->
                             <!-- Cart Item-->
                             <div class="row mx-0 py-4 g-0 border-bottom">
                                 <div class="col-2 position-relative">
-                                        <span class="checkout-item-qty">3</span>
+                                        <span class="checkout-item-qty">1</span>
                                     <picture class="d-block border">
-                                        <img class="img-fluid" src="./assets/images/products/product-cart-2.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                        <img class="img-fluid" src="./assets/images/products/product-cart-2.jpeg"
                                     </picture>
                                 </div>
                                 <div class="col-9 offset-1">
                                     <div>
                                         <h6 class="justify-content-between d-flex align-items-start mb-2">
-                                            Nike ZoomX Vaporfly
+                                            Disorder Blue Pearl Pre-Workout
                                             <i class="ri-close-line ms-3"></i>
                                         </h6>
-                                        <span class="d-block text-muted fw-bolder text-uppercase fs-9">Size: 11 / Qty: 1</span>
+                                        <span class="d-block text-muted fw-bolder text-uppercase fs-9">Size: 40 Serves / Qty: 1</span>
                                     </div>
-                                    <p class="fw-bolder text-end text-muted m-0">$125.00</p>
+                                    <p class="fw-bolder text-end text-muted m-0">$25.00</p>
                                 </div>
                             </div>    <!-- / Cart Item-->
                         </div>
                         <div class="py-4 border-bottom">
                             <div class="d-flex justify-content-between align-items-center mb-2">
                                 <p class="m-0 fw-bolder fs-6">Subtotal</p>
-                                <p class="m-0 fs-6 fw-bolder">$422.99</p>
+                                <p class="m-0 fs-6 fw-bolder">$50</p>
                             </div>
                             <div class="d-flex justify-content-between align-items-center ">
                                 <p class="m-0 fw-bolder fs-6">Shipping</p>
@@ -255,9 +255,9 @@
                             <div class="d-flex justify-content-between">
                                 <div>
                                     <p class="m-0 fw-bold fs-5">Grand Total</p>
-                                    <span class="text-muted small">Inc $45.89 sales tax</span>
+                                    <span class="text-muted small">Inc $5 sales tax</span>
                                 </div>
-                                <p class="m-0 fs-5 fw-bold">$422.99</p>
+                                <p class="m-0 fs-5 fw-bold">$58.95</p>
                             </div>
                         </div>
                         <div class="py-4">
