--- a/checkout.html
+++ b/checkout.html
@@ -43,7 +43,7 @@
   </noscript>
 
   <!-- Page Title -->
-  <title>OldSkool | Bootstrap 5 HTML Template</title>
+  <title>Nick's Supps Store</title>
 
 </head>
 <body class="">
@@ -143,7 +143,7 @@
                                   <label for="country" class="form-label">Country</label>
                                   <select class="form-select" id="country" required="">
                                     <option value="">Please Select...</option>
-                                    <option>United States</option>
+                                    <option>Australia</option>
                                   </select>
                                 </div>
                               </div>
@@ -154,7 +154,14 @@
                                   <label for="state" class="form-label">State</label>
                                   <select class="form-select" id="state" required="">
                                     <option value="">Please Select...</option>
-                                    <option>California</option>
+                                    <option>South Australia</option>
+                                    <option>Western Australia</option>
+                                    <option>Northern Territory</option>
+                                    <option>New South Wales</option>
+                                    <option>Victoria</option>
+                                    <option>Queensland</option>
+                                    <option>Australian Capital Territory</option>
+                                    <option>Tasmania</option>
                                   </select>
                                 </div>
                               </div>
@@ -210,7 +217,7 @@
                                     <label for="countryAddress" class="form-label">Country</label>
                                     <select class="form-select" id="countryAddress" required="">
                                       <option value="">Please Select...</option>
-                                      <option>United States</option>
+                                      <option>Australia</option>
                                     </select>
                                   </div>
                                 </div>
@@ -221,7 +228,14 @@
                                     <label for="stateAddress" class="form-label">State</label>
                                     <select class="form-select" id="stateAddress" required="">
                                       <option value="">Please Select...</option>
-                                      <option>California</option>
+                                    <option>South Australia</option>
+                                    <option>Western Australia</option>
+                                    <option>Northern Territory</option>
+                                    <option>New South Wales</option>
+                                    <option>Victoria</option>
+                                    <option>Queensland</option>
+                                    <option>Australian Capital Territory</option>
+                                    <option>Tasmania</option>
                                     </select>
                                   </div>
                                 </div>
@@ -248,7 +262,7 @@
                             <!-- Cart Item-->
                             <div class="row mx-0 py-4 g-0 border-bottom">
                                 <div class="col-2 position-relative">
-                                        <span class="checkout-item-qty">3</span>
+                                        <span class="checkout-item-qty">1</span>
                                     <picture class="d-block border">
                                         <img class="img-fluid" src="./assets/images/products/product-cart-1.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
                                     </picture>
@@ -256,38 +270,38 @@
                                 <div class="col-9 offset-1">
                                     <div>
                                         <h6 class="justify-content-between d-flex align-items-start mb-2">
-                                            Nike Air VaporMax 2021
+                                            Disorder Brown Sugar Pre-Workout
                                             <i class="ri-close-line ms-3"></i>
                                         </h6>
-                                        <span class="d-block text-muted fw-bolder text-uppercase fs-9">Size: 9 / Qty: 1</span>
+                                        <span class="d-block text-muted fw-bolder text-uppercase fs-9">Size: 40 Serves / Qty: 1</span>
                                     </div>
-                                    <p class="fw-bolder text-end text-muted m-0">$85.00</p>
+                                    <p class="fw-bolder text-end text-muted m-0">$25.00</p>
                                 </div>
                             </div>    <!-- / Cart Item-->
                             <!-- Cart Item-->
                             <div class="row mx-0 py-4 g-0 border-bottom">
                                 <div class="col-2 position-relative">
-                                        <span class="checkout-item-qty">3</span>
+                                        <span class="checkout-item-qty">1</span>
                                     <picture class="d-block border">
-                                        <img class="img-fluid" src="./assets/images/products/product-cart-2.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                        <img class="img-fluid" src="./assets/images/products/product-cart-2.jpeg" alt="HTML Bootstrap Template by Pixel Rocket">
                                     </picture>
                                 </div>
                                 <div class="col-9 offset-1">
                                     <div>
                                         <h6 class="justify-content-between d-flex align-items-start mb-2">
-                                            Nike ZoomX Vaporfly
+                                            Disorder Blue Pearl Pre-Workout
                                             <i class="ri-close-line ms-3"></i>
                                         </h6>
-                                        <span class="d-block text-muted fw-bolder text-uppercase fs-9">Size: 11 / Qty: 1</span>
+                                        <span class="d-block text-muted fw-bolder text-uppercase fs-9">Size: 40 Serves / Qty: 1</span>
                                     </div>
-                                    <p class="fw-bolder text-end text-muted m-0">$125.00</p>
+                                    <p class="fw-bolder text-end text-muted m-0">$25.00</p>
                                 </div>
                             </div>    <!-- / Cart Item-->
                         </div>
                         <div class="py-4 border-bottom">
                             <div class="d-flex justify-content-between align-items-center mb-2">
                                 <p class="m-0 fw-bolder fs-6">Subtotal</p>
-                                <p class="m-0 fs-6 fw-bolder">$422.99</p>
+                                <p class="m-0 fs-6 fw-bolder">$50</p>
                             </div>
                             <div class="d-flex justify-content-between align-items-center ">
                                 <p class="m-0 fw-bolder fs-6">Shipping</p>
@@ -298,9 +312,9 @@
                             <div class="d-flex justify-content-between">
                                 <div>
                                     <p class="m-0 fw-bold fs-5">Grand Total</p>
-                                    <span class="text-muted small">Inc $45.89 sales tax</span>
+                                    <span class="text-muted small">Inc $5 sales tax</span>
                                 </div>
-                                <p class="m-0 fs-5 fw-bold">$422.99</p>
+                                <p class="m-0 fs-5 fw-bold">$58.95</p>
                             </div>
                         </div>
                         <div class="py-4">
