--- a/checkout.html
+++ b/checkout.html
@@ -264,7 +264,7 @@
                                 <div class="col-2 position-relative">
                                         <span class="checkout-item-qty">1</span>
                                     <picture class="d-block border">
-                                        <img class="img-fluid" src="./assets/images/products/product-cart-1.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                        <img class="img-fluid" src="./assets/images/products/product-cart-1.jpg">
                                     </picture>
                                 </div>
                                 <div class="col-9 offset-1">
@@ -283,7 +283,7 @@
                                 <div class="col-2 position-relative">
                                         <span class="checkout-item-qty">1</span>
                                     <picture class="d-block border">
-                                        <img class="img-fluid" src="./assets/images/products/product-cart-2.jpeg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                        <img class="img-fluid" src="./assets/images/products/product-cart-2.jpeg">
                                     </picture>
                                 </div>
                                 <div class="col-9 offset-1">
