--- a/product.html
+++ b/product.html
@@ -126,7 +126,7 @@
                                     <div class="row mx-0 py-4 g-0 border-bottom">
                                         <div class="col-2 position-relative">
                                             <picture class="d-block ">
-                                                <img class="img-fluid" src="./assets/images/products/product-cart-1.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                                <img class="img-fluid" src="./assets/images/products/product-cart-1.jpg">
                                             </picture>
                                         </div>
                                         <div class="col-9 offset-1">
@@ -144,7 +144,7 @@
                                     <div class="row mx-0 py-4 g-0 border-bottom">
                                         <div class="col-2 position-relative">
                                             <picture class="d-block ">
-                                                <img class="img-fluid" src="./assets/images/products/product-cart-2.jpeg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                                <img class="img-fluid" src="./assets/images/products/product-cart-2.jpeg">
                                             </picture>
                                         </div>
                                         <div class="col-9 offset-1">
@@ -324,37 +324,37 @@
                                                       <div class="col-12 col-md-6">
                                                           <div class="card justify-content-center d-flex align-items-center bg-transparent">
                                                               <picture class="w-100 d-block mb-2 mx-auto">
-                                                                  <img class="w-100 rounded" title="" src="./assets/images/banners/banner-12.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                                                  <img class="w-100 rounded" title="" src="./assets/images/banners/banner-12.jpg">
                                                               </picture>
-                                                              <a class="fw-bolder link-cover" href="./category.html">Latest Arrivals</a>
+                                                              <a class="fw-bolder link-cover" href="./category.html">Deficit</a>
                                                           </div>
                                                       </div>
                                                       <div class="col-12 col-md-6">
                                                           <div class="card justify-content-center d-flex align-items-center bg-transparent">
                                                               <picture class="w-100 d-block mb-2 mx-auto">
-                                                                  <img class="w-100 rounded" title="" src="./assets/images/banners/banner-13.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                                                  <img class="w-100 rounded" title="" src="./assets/images/banners/banner-13.jpg">
                                                               </picture>
-                                                              <a class="fw-bolder link-cover" href="./category.html">Accessories</a>
+                                                              <a class="fw-bolder link-cover" href="./category.html">Deficit</a>
                                                           </div>
                                                       </div>
                                                       <div class="col-12 col-md-6">
                                                           <div class="card justify-content-center d-flex align-items-center bg-transparent">
                                                               <picture class="w-100 d-block mb-2 mx-auto">
-                                                                  <img class="w-100 rounded" title="" src="./assets/images/banners/banner-14.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                                                  <img class="w-100 rounded" title="" src="./assets/images/banners/banner-14.jpg">
                                                               </picture>
-                                                              <a class="fw-bolder link-cover" href="./category.html">T-Shirts</a>
+                                                              <a class="fw-bolder link-cover" href="./category.html">Deficit</a>
                                                           </div>
                                                       </div>
                                                       <div class="col-12 col-md-6">
                                                           <div class="card justify-content-center d-flex align-items-center bg-transparent">
                                                               <picture class="w-100 d-block mb-2 mx-auto">
-                                                                  <img class="w-100 rounded" title="" src="./assets/images/banners/banner-15.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                                                  <img class="w-100 rounded" title="" src="./assets/images/banners/banner-15.jpg">
                                                               </picture>
-                                                              <a class="fw-bolder link-cover" href="./category.html">Jackets</a>
+                                                              <a class="fw-bolder link-cover" href="./category.html">Deficit</a>
                                                           </div>
                                                       </div>
                                                   </div>
-                                                  <a href="./category.html" class="btn btn-link p-0 fw-bolder text-link-border mt-5 text-dark mx-auto d-table">Visit Mens Section</a>
+                                                  <a href="./category.html" class="btn btn-link p-0 fw-bolder text-link-border mt-5 text-dark mx-auto d-table">Visit Pre-Workouts</a>
                                               </div>
                                           </div>
                                           <!-- Menswear Dropdown Menu Images Section-->
@@ -365,20 +365,20 @@
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                  Women
+                                Protein Powders
                                 </a>
                                 <ul class="dropdown-menu">
-                                  <li><a class="dropdown-item" href="./category.html">Tops</a></li>
-                                  <li><a class="dropdown-item" href="./category.html">Bottoms</a></li>
-                                  <li><a class="dropdown-item" href="./category.html">Jeans</a></li>
-                                  <li><a class="dropdown-item" href="./category.html">T-Shirts</a></li>
-                                  <li><a class="dropdown-item" href="./category.html">Shoes</a></li>
-                                  <li><a class="dropdown-item" href="./category.html">Accessories</a></li>
+                                  <li><a class="dropdown-item" href="./category.html">Ghost</a></li>
+                                  <li><a class="dropdown-item" href="./category.html">Musashi</a></li>
+                                  <li><a class="dropdown-item" href="./category.html">MuscleTech</a></li>
+                                  <li><a class="dropdown-item" href="./category.html">Arnold</a></li>
+                                  <li><a class="dropdown-item" href="./category.html">13Lives</a></li>
+                                  <li><a class="dropdown-item" href="./category.html">Faction Labs</a></li>
                                 </ul>
                               </li>
                               <li class="nav-item">
                                 <a class="nav-link" href="./category.html" role="button">
-                                  Kids
+                                  Other Supplements
                                 </a>
                               </li>
                               <li class="nav-item">
@@ -569,10 +569,10 @@
                                 </small>
                                 <div class="mt-4 d-flex justify-content-start flex-wrap align-items-start">
                                     <picture class="me-2">
-                                        <img class="f-w-24 p-2 bg-light border-bottom border-dark border-2 cursor-pointer" src="./assets/images/products/product-page-thumb-1.jpeg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                        <img class="f-w-24 p-2 bg-light border-bottom border-dark border-2 cursor-pointer" src="./assets/images/products/product-page-thumb-1.jpeg">
                                     </picture>
                                     <picture>
-                                        <img class="f-w-24 p-2 bg-light cursor-pointer" src="./assets/images/products/product-page-thumb-2.jpeg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                        <img class="f-w-24 p-2 bg-light cursor-pointer" src="./assets/images/products/product-page-thumb-2.jpeg">
                                     </picture>
                                 </div>
                             </div>
@@ -714,7 +714,7 @@
                                   </div>
                                   <div class="card-body px-0">
                                       <a class="text-decoration-none link-cover" href="./product.html">Ghost Whey Protein</a>
-                                      <small class="text-muted d-block">4 colours, 10 sizes</small>
+                                      <small class="text-muted d-block">3 colours, 3 sizes</small>
                                               <p class="mt-2 mb-0 small"><s class="text-muted">$69.99</s> <span class="text-danger">$65.99</span></p>
                                   </div>
                               </div>
