--- a/cart.html
+++ b/cart.html
@@ -82,7 +82,7 @@
                                         <div class="row mx-0 py-4 g-0 border-bottom">
                                             <div class="col-2 position-relative">
                                                 <picture class="d-block border">
-                                                    <img class="img-fluid" src="./assets/images/products/product-cart-1.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                                    <img class="img-fluid" src="./assets/images/products/product-cart-1.jpg">
                                                 </picture>
                                             </div>
                                             <div class="col-9 offset-1">
@@ -100,7 +100,7 @@
                                         <div class="row mx-0 py-4 g-0 border-bottom">
                                             <div class="col-2 position-relative">
                                                 <picture class="d-block border">
-                                                    <img class="img-fluid" src="./assets/images/products/product-cart-2.jpeg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                                    <img class="img-fluid" src="./assets/images/products/product-cart-2.jpeg">
                                                 </picture>
                                             </div>
                                             <div class="col-9 offset-1">
