--- a/category.html
+++ b/category.html
@@ -144,7 +144,7 @@
                                     <div class="row mx-0 py-4 g-0 border-bottom">
                                         <div class="col-2 position-relative">
                                             <picture class="d-block ">
-                                                <img class="img-fluid" src="./assets/images/products/product-cart-2.jpeg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                                <img class="img-fluid" src="./assets/images/products/product-cart-2.jpeg">
                                             </picture>
                                         </div>
                                         <div class="col-9 offset-1">
@@ -324,37 +324,37 @@
                                                       <div class="col-12 col-md-6">
                                                           <div class="card justify-content-center d-flex align-items-center bg-transparent">
                                                               <picture class="w-100 d-block mb-2 mx-auto">
-                                                                  <img class="w-100 rounded" title="" src="./assets/images/banners/banner-12.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                                                  <img class="w-100 rounded" title="" src="./assets/images/banners/banner-12.jpg">
                                                               </picture>
-                                                              <a class="fw-bolder link-cover" href="./category.html">Latest Arrivals</a>
+                                                              <a class="fw-bolder link-cover" href="./category.html">Deficit</a>
                                                           </div>
                                                       </div>
                                                       <div class="col-12 col-md-6">
                                                           <div class="card justify-content-center d-flex align-items-center bg-transparent">
                                                               <picture class="w-100 d-block mb-2 mx-auto">
-                                                                  <img class="w-100 rounded" title="" src="./assets/images/banners/banner-13.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                                                  <img class="w-100 rounded" title="" src="./assets/images/banners/banner-13.jpg">
                                                               </picture>
-                                                              <a class="fw-bolder link-cover" href="./category.html">Accessories</a>
+                                                              <a class="fw-bolder link-cover" href="./category.html">Deficit</a>
                                                           </div>
                                                       </div>
                                                       <div class="col-12 col-md-6">
                                                           <div class="card justify-content-center d-flex align-items-center bg-transparent">
                                                               <picture class="w-100 d-block mb-2 mx-auto">
-                                                                  <img class="w-100 rounded" title="" src="./assets/images/banners/banner-14.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                                                  <img class="w-100 rounded" title="" src="./assets/images/banners/banner-14.jpg">
                                                               </picture>
-                                                              <a class="fw-bolder link-cover" href="./category.html">T-Shirts</a>
+                                                              <a class="fw-bolder link-cover" href="./category.html">Deficit</a>
                                                           </div>
                                                       </div>
                                                       <div class="col-12 col-md-6">
                                                           <div class="card justify-content-center d-flex align-items-center bg-transparent">
                                                               <picture class="w-100 d-block mb-2 mx-auto">
-                                                                  <img class="w-100 rounded" title="" src="./assets/images/banners/banner-15.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
+                                                                  <img class="w-100 rounded" title="" src="./assets/images/banners/banner-15.jpg">
                                                               </picture>
-                                                              <a class="fw-bolder link-cover" href="./category.html">Jackets</a>
+                                                              <a class="fw-bolder link-cover" href="./category.html">Deficit</a>
                                                           </div>
                                                       </div>
                                                   </div>
-                                                  <a href="./category.html" class="btn btn-link p-0 fw-bolder text-link-border mt-5 text-dark mx-auto d-table">Visit Mens Section</a>
+                                                  <a href="./category.html" class="btn btn-link p-0 fw-bolder text-link-border mt-5 text-dark mx-auto d-table">Visit Pre-Workouts</a>
                                               </div>
                                           </div>
                                           <!-- Menswear Dropdown Menu Images Section-->
@@ -365,20 +365,20 @@
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                  Women
+                                 Protein Powders
                                 </a>
                                 <ul class="dropdown-menu">
-                                  <li><a class="dropdown-item" href="./category.html">Tops</a></li>
-                                  <li><a class="dropdown-item" href="./category.html">Bottoms</a></li>
-                                  <li><a class="dropdown-item" href="./category.html">Jeans</a></li>
-                                  <li><a class="dropdown-item" href="./category.html">T-Shirts</a></li>
-                                  <li><a class="dropdown-item" href="./category.html">Shoes</a></li>
-                                  <li><a class="dropdown-item" href="./category.html">Accessories</a></li>
+                                  <li><a class="dropdown-item" href="./category.html">Ghost</a></li>
+                                  <li><a class="dropdown-item" href="./category.html">Musashi</a></li>
+                                  <li><a class="dropdown-item" href="./category.html">MuscleTech</a></li>
+                                  <li><a class="dropdown-item" href="./category.html">Arnold</a></li>
+                                  <li><a class="dropdown-item" href="./category.html">13Lives</a></li>
+                                  <li><a class="dropdown-item" href="./category.html">Faction Labs</a></li>
                                 </ul>
                               </li>
                               <li class="nav-item">
                                 <a class="nav-link" href="./category.html" role="button">
-                                  Kids
+                                  Other Supplements
                                 </a>
                               </li>
                               <li class="nav-item">
@@ -545,9 +545,9 @@
                                     </div>
                             </div>
                             <div class="card-body px-0">
-                                <a class="text-decoration-none link-cover" href="./product.html">Nike Air Force 1</a>
-                                <small class="text-muted d-block">6 colours, 9 sizes</small>
-                                        <p class="mt-2 mb-0 small">$425.85</p>
+                                <a class="text-decoration-none link-cover" href="./product.html">Isopept</a>
+                                <small class="text-muted d-block">2 flavours, 2 sizes</small>
+                                        <p class="mt-2 mb-0 small">$80</p>
                             </div>
                         </div>
                         <!--/ Card Product-->
@@ -568,9 +568,9 @@
                                     </div>
                             </div>
                             <div class="card-body px-0">
-                                <a class="text-decoration-none link-cover" href="./product.html">Nike Air Max 90</a>
-                                <small class="text-muted d-block">4 colours, 10 sizes</small>
-                                        <p class="mt-2 mb-0 small"><s class="text-muted">$196.99</s> <span class="text-danger">$98.66</span></p>
+                                <a class="text-decoration-none link-cover" href="./product.html">Muscle Nation Protein</a>
+                                <small class="text-muted d-block">4 flavours, 4 sizes</small>
+                                        <p class="mt-2 mb-0 small"><s class="text-muted">$65.99</s> <span class="text-danger">$55.99</span></p>
                             </div>
                         </div>
                         <!--/ Card Product-->
@@ -592,9 +592,9 @@
                                     </div>
                             </div>
                             <div class="card-body px-0">
-                                <a class="text-decoration-none link-cover" href="./product.html">Nike Glide FlyEase</a>
+                                <a class="text-decoration-none link-cover" href="./product.html">Muscle Nation Protein</a>
                                 <small class="text-muted d-block">1 colour</small>
-                                        <p class="mt-2 mb-0 small"><s class="text-muted">$329.99</s> <span class="text-danger">$198.66</span></p>
+                                        <p class="mt-2 mb-0 small"><s class="text-muted">$65.99</s> <span class="text-danger">$55.99</span></p>
                             </div>
                         </div>
                         <!--/ Card Product-->
@@ -614,9 +614,9 @@
                                     </div>
                             </div>
                             <div class="card-body px-0">
-                                <a class="text-decoration-none link-cover" href="./product.html">Nike Zoom Freak</a>
+                                <a class="text-decoration-none link-cover" href="./product.html">Optimum Gold Standard Whey</a>
                                 <small class="text-muted d-block">2 colours, 2 sizes</small>
-                                        <p class="mt-2 mb-0 small">$444.99</p>
+                                        <p class="mt-2 mb-0 small">$76.99</p>
                             </div>
                         </div>
                         <!--/ Card Product-->
@@ -637,9 +637,9 @@
                                     </div>
                             </div>
                             <div class="card-body px-0">
-                                <a class="text-decoration-none link-cover" href="./product.html">Nike Air Pegasus</a>
-                                <small class="text-muted d-block">3 colours, 10 sizes</small>
-                                        <p class="mt-2 mb-0 small">$178.99</p>
+                                <a class="text-decoration-none link-cover" href="./product.html">Emrald Labs Protein Creme</a>
+                                <small class="text-muted d-block">2 flavours, 2 sizes</small>
+                                        <p class="mt-2 mb-0 small">$45.99</p>
                             </div>
                         </div>
                         <!--/ Card Product-->
@@ -660,9 +660,9 @@
                                     </div>
                             </div>
                             <div class="card-body px-0">
-                                <a class="text-decoration-none link-cover" href="./product.html">Nike Air Jordans</a>
-                                <small class="text-muted d-block">3 colours, 10 sizes</small>
-                                        <p class="mt-2 mb-0 small">$154.99</p>
+                                <a class="text-decoration-none link-cover" href="./product.html">Ghost Protein </a>
+                                <small class="text-muted d-block">3 flavours, 3 sizes</small>
+                                        <p class="mt-2 mb-0 small">$65.99</p>
                             </div>
                         </div>
                         <!--/ Card Product-->
